--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+#bgImage{
+  /* height: 100vh;
+  width: 100%; */
+  border-color: 2px solid red;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  /* opacity: 0.7; */
+}
+
+.login_details{
+  position: absolute;
+  top: 150px;
+  z-index: 1;
+  height: 100vh;
+}
+
+.signup_details{
+  position: absolute;
+  top: 125px;
+  z-index: 1;
+  height: 100vh;
+}
